[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = ""
authors = ["Sam Kimbinyi <sam@kimbinyi.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
